Basic OrientDB Implementation